--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -2,7 +2,7 @@
 
 # This is a basic workflow to help you get started with Actions
 
-name: Update Data and Notebook
+name: Run Notebook NBConvert
 
 # Controls when the workflow will run
 on:
