--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -17,8 +17,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      GITHUB_REPO: ${{ secrets.GITHUB_REPO }}
-      GITHUB_ORG: ${{ secrets.GITHUB_ORG }}
+      REPO: ${{ secrets.REPO }}
+      ORG: ${{ secrets.ORG }}
 
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       S3_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT_URL }}
