--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -38,6 +38,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+          
+      - name: Install xmllint
+        run: sudo apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
+        
       - name: Install dependencies
         run: python -m pip install --upgrade pip -r requirements.txt
 #       - name: Update data
