--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -56,3 +56,13 @@ jobs:
           author_name: update notebook with pipeline
           message: "Update Notebook"
           add: "01_notebook_executed.ipynb"
+      - name: Feature Engineering notebook
+        run: |
+          python -m pip install jupyter nbconvert nbformat
+          jupyter nbconvert --to notebook --execute 02_feature_engineering.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 02_notebook_executed
+      - name: commit updated notebook 2
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: update notebook with pipeline
+          message: "Update Notebook 2"
+          add: "02_feature_engineering.ipynb"
