ADD TRINO CREDS

--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -28,6 +28,11 @@ jobs:
       CEPH_SECRET_KEY: ${{ secrets.CEPH_SECRET_KEY }}
 
       GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      
+      TRINO_USER: ${{ secrets.TRINO_USER }}
+      TRINO_PASSWD: ${{ secrets.TRINO_PASSWD }}
+      TRINO_HOST: ${{ secrets.TRINO_HOST }}
+      TRINO_PORT: ${{ secrets.TRINO_PORT }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
