Add notebook3 to the workflow

--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -73,3 +73,13 @@ jobs:
           author_name: update notebook with pipeline
           message: "Update Notebook 2"
           add: "02_notebook_executed.ipynb"
+      - name: Model Training notebook
+        run: |
+          python -m pip install jupyter nbconvert nbformat
+          jupyter nbconvert --to notebook --execute 03_model_training.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 03_notebook_executed
+      - name: commit updated notebook 3
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: update notebook with pipeline
+          message: "Update Notebook 3"
+          add: "03_notebook_executed.ipynb"
