--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -37,6 +37,8 @@ jobs:
       
       REMOTE: 1
       CHOSEN_MODEL: 'rf'
+      REGISTRY: quay.io
+      IMAGE_NAME: ${{ github.repository }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
