--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Run Notebook NBConvert
+name: Run notebooks
 
 # Controls when the workflow will run
 on:
@@ -14,14 +14,16 @@ jobs:
   pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    if: ${{ !github.event.client_payload.AWS_ACCESS_KEY_ID.passed }} &&  ${{ !github.event.client_payload.S3_ENDPOINT_URL.passed }} && ${{ !github.event.client_payload.S3_BUCKET.passed }} && ${{ !github.event.client_payload.AWS_SECRET_ACCESS_KEY.passed }}
     env:
+      
       GITHUB_REPO: ${{ github.event.client_payload.REPO }}
       GITHUB_ORG: ${{ github.event.client_payload.ORG }}
 
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      S3_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT_URL }}
-      S3_BUCKET: ${{ secrets.S3_BUCKET }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID || github.event.client_payload.AWS_ACCESS_KEY_ID}}
+      S3_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT_URL || github.event.client_payload.S3_ENDPOINT_URL }}
+      S3_BUCKET: ${{ secrets.S3_BUCKET || github.event.client_payload.S3_BUCKET}}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY || github.event.client_payload.AWS_SECRET_ACCESS_KEY }}
 
       CEPH_BUCKET: ${{ secrets.CEPH_BUCKET }}
       CEPH_BUCKET_PREFIX: ${{ secrets.CEPH_BUCKET_PREFIX }}
