--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -14,7 +14,7 @@ jobs:
   pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    if: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID.passed }}
+    if: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID.passed }} == true
     env:
       
       AWS_ACCESS_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID}}
