--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,30 +56,11 @@ jobs:
       - name: Install xmllint
         run: sudo apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          file: username/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip -r requirements.txt
+      - name: Pull dependencies from Quay
+        run: docker pull quay.io/aicoe/optimal-stopping-point:latest
+                 
+#       - name: Install dependencies
+#         run: python -m pip install --upgrade pip -r requirements.txt
 #       - name: Update data
 #         run: python ./src/main.py
       - name: Data Collection notebook
