--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Run notebooks
+name: Test notebooks
 
 # Controls when the workflow will run
 on:
