--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,7 +58,13 @@ jobs:
 
       - name: Pull dependencies from Quay
         run: docker pull quay.io/aicoe/optimal-stopping-point:latest
-                 
+        
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: quay.io/aicoe/optimal-stopping-point:latest
+
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
 #       - name: Update data
