--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -19,8 +19,8 @@ jobs:
       
       AWS_ACCESS_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID}}
     
-      GITHUB_REPO: ${{ github.event.client_payload.REPO }}
-      GITHUB_ORG: ${{ github.event.client_payload.ORG }}
+      GITHUB_REPO: ${{ github.event.client_payload.REPO || secrets.REPO }}
+      GITHUB_ORG: ${{ github.event.client_payload.ORG || secrets.ORG }}
 
       S3_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT_URL }}
       S3_BUCKET: ${{ secrets.S3_BUCKET }}
