--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -57,7 +57,7 @@ jobs:
         run: sudo apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
 
       - name: Pull dependencies from Quay
-        run: docker pull quay.io/aicoe/optimal-stopping-point:latest
+        uses: docker://quay.io/aicoe/optimal-stopping-point:latest
         
       - name: Extract metadata (tags, labels) for Docker
         id: meta
