--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Run notebooks
+name: base container image
 
 # Controls when the workflow will run
 on:
