--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -56,7 +56,7 @@ jobs:
           python-version: '3.9'
           
       - name: Install xmllint
-        run: sudo apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
+        run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
           
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
