--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -55,8 +55,8 @@ jobs:
         with:
           python-version: '3.9'
           
-      - name: Install xmllint
-        run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
+#       - name: Install xmllint
+#         run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
           
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
