--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -57,7 +57,10 @@ jobs:
           
 #       - name: Install xmllint
 #         run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
-          
+        
+      - name: installs
+        run: yum install python39 python39-python-pip
+        
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
 #       - name: Update data
