--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -59,7 +59,7 @@ jobs:
 #         run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
         
       - name: installs
-        run: yum install python39 python39-python-pip
+        run: yum install python39
         
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
