--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -59,7 +59,9 @@ jobs:
 #         run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
         
       - name: installs
-        run: yum install python39
+        run: |
+          subscription-manager repos --enable rhel-server-rhscl-7-rpms
+          yum install python39
         
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
