--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -57,7 +57,10 @@ jobs:
 #         run: apt-get install build-essential libffi-dev python3 python3-dev python3-pip libfuzzy-dev
         
       - name: installs
-        run: yum -y install python39 glibc
+        run: |
+          yum -y install python39 glibc
+          yum upgrade glibc
+        
         
 #       - name: Install dependencies
 #         run: python -m pip install --upgrade pip -r requirements.txt
