--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -63,7 +63,7 @@ jobs:
         
         
 #       - name: Install dependencies
-#         run: python -m pip install --upgrade pip -r requirements.txt
+#         run: python3 -m pip install --upgrade pip -r requirements.txt
 #       - name: Update data
 #         run: python ./src/main.py
       - name: Data Collection notebook
@@ -78,7 +78,7 @@ jobs:
           add: "01_notebook_executed.ipynb"
       - name: Feature Engineering notebook
         run: |
-          python -m pip install jupyter nbconvert nbformat
+          python3 -m pip install jupyter nbconvert nbformat
           jupyter nbconvert --to notebook --execute 02_feature_engineering.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 02_notebook_executed
       - name: commit updated notebook 2
         uses: EndBug/add-and-commit@v7
