--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -68,7 +68,7 @@ jobs:
 #         run: python ./src/main.py
       - name: Data Collection notebook
         run: |
-          python -m pip install jupyter nbconvert nbformat
+          python3 -m pip install jupyter nbconvert nbformat
           jupyter nbconvert --to notebook --execute 01_data_collection.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 01_notebook_executed
       - name: commit updated notebook
         uses: EndBug/add-and-commit@v7
