--- a/.github/workflows/test-docker-container.yaml
+++ b/.github/workflows/test-docker-container.yaml
@@ -77,9 +77,8 @@ jobs:
           message: "Update Notebook"
           add: "01_notebook_executed.ipynb"
       - name: Feature Engineering notebook
-        run: |
-          python3 -m pip install jupyter nbconvert nbformat
-          jupyter nbconvert --to notebook --execute 02_feature_engineering.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 02_notebook_executed
+#       python3 -m pip install jupyter nbconvert nbformat
+        run: jupyter nbconvert --to notebook --execute 02_feature_engineering.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 02_notebook_executed
       - name: commit updated notebook 2
         uses: EndBug/add-and-commit@v7
         with:
