--- a/.github/workflows/install-from-config.yaml
+++ b/.github/workflows/install-from-config.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Run notebooks
+name: Install from config
 
 # Controls when the workflow will run
 on:
@@ -7,10 +7,10 @@ on:
   repository_dispatch:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  # Allows submitting to this workflow using client payload
+  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 
 jobs:
-  # This workflow contains a single job called "build"
   pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -58,8 +58,7 @@ jobs:
           
       - name: Install dependencies
         run: python -m pip install --upgrade pip -r requirements.txt
-#       - name: Update data
-#         run: python ./src/main.py
+
       - name: Data Collection notebook
         run: |
           python -m pip install jupyter nbconvert nbformat
