--- a/.github/workflows/run-in-container.yaml
+++ b/.github/workflows/run-in-container.yaml
@@ -24,15 +24,16 @@ jobs:
       GITHUB_REPO: ${{ github.event.client_payload.REPO || secrets.REPO }}
       GITHUB_ORG: ${{ github.event.client_payload.ORG || secrets.ORG }}
 
-      S3_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT_URL }}
-      S3_BUCKET: ${{ secrets.S3_BUCKET }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      S3_ENDPOINT_URL: ${{ github.event.client_payload.S3_ENDPOINT_URL || secrets.S3_ENDPOINT_URL }}
+      S3_BUCKET: ${{ github.event.client_payload.S3_BUCKET || secrets.S3_BUCKET }}
+      AWS_SECRET_ACCESS_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
 
-      CEPH_BUCKET: ${{ secrets.CEPH_BUCKET }}
-      CEPH_BUCKET_PREFIX: ${{ secrets.CEPH_BUCKET_PREFIX }}
-      CEPH_KEY_ID: ${{ secrets.CEPH_KEY_ID }}
-      CEPH_SECRET_KEY: ${{ secrets.CEPH_SECRET_KEY }}
+      CEPH_BUCKET: ${{ github.event.client_payload.S3_BUCKET || secrets.S3_BUCKET }}
+      CEPH_BUCKET_PREFIX: ${{ github.event.client_payload.S3_PREFIX || secrets.CEPH_BUCKET_PREFIX }}
+      CEPH_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID }}
+      CEPH_SECRET_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
 
+# Change from secret
       GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       
       REMOTE: 1
