glibc upgrade to fix errors

--- a/.github/workflows/run-in-container.yaml
+++ b/.github/workflows/run-in-container.yaml
@@ -53,6 +53,12 @@ jobs:
         run: |
           yum -y install gcc gcc-c++ make python39 python3-setuptools glibc libffi automake autoconf libtool
           yum upgrade glibc
+          wget -c https://ftp.gnu.org/gnu/glibc/glibc-2.29.tar.gz
+          tar -zxvf glibc-2.29.tar.gz
+          cd glibc-2.29
+          ./configure --prefix=/opt/glibc
+          make 
+          make install
         
       - name: Data Collection notebook
         run: jupyter nbconvert --to notebook --execute 01_data_collection.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 01_notebook_executed
