--- a/.github/workflows/install-from-config.yaml
+++ b/.github/workflows/install-from-config.yaml
@@ -80,3 +80,11 @@ jobs:
           author_name: update notebook with pipeline
           message: "Update Notebook 3"
           add: "03_notebook_executed.ipynb"
+      - name: Model Inference notebook
+        run: jupyter nbconvert --to notebook --execute 04_model_inference.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 04_notebook_executed
+      - name: commit updated notebook 4
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: update notebook with pipeline
+          message: "Update Notebook 4"
+          add: "04_notebook_executed.ipynb"
