--- a/.github/workflows/run-in-container.yaml
+++ b/.github/workflows/run-in-container.yaml
@@ -55,8 +55,9 @@ jobs:
           yum upgrade glibc
           wget -c https://ftp.gnu.org/gnu/glibc/glibc-2.29.tar.gz
           tar -zxvf glibc-2.29.tar.gz
-          cd glibc-2.29
-          ./configure --prefix=/opt/glibc
+          mkdir glibc-build
+          cd glibc-build
+          ../glibc-2.29/configure --prefix=/opt/glibc
           make 
           make install
         
