--- a/.github/workflows/run-in-container.yaml
+++ b/.github/workflows/run-in-container.yaml
@@ -53,6 +53,14 @@ jobs:
         run: |
           yum -y install gcc gcc-c++ make python39 python3-setuptools glibc libffi automake autoconf libtool
           yum upgrade glibc
+          
+          wget https://ftp.gnu.org/gnu/bison/bison-3.2.tar.gz
+          tar xf bison-3.2.tar.gz
+          cd bison-3.2
+          ./configure --prefix=$HOME/install
+          make
+          make install
+
           wget -c https://ftp.gnu.org/gnu/glibc/glibc-2.29.tar.gz
           tar -zxvf glibc-2.29.tar.gz
           mkdir glibc-build
