combine exporting PAT and running script in same job

--- a/.github/workflows/run-in-container.yaml
+++ b/.github/workflows/run-in-container.yaml
@@ -51,10 +51,9 @@ jobs:
 #           author_name: update notebook with pipeline
 #           message: "Update Notebook"
 #           add: "01_notebook_executed.ipynb"
-      - name: Set token
-        run: export GITHUB_ACCESS_TOKEN=GITHUB_ACCESS_TOKEN
+
       - name: Run data collection
-        run: python data_collection.py
+        run: export GITHUB_ACCESS_TOKEN=$GITHUB_ACCESS_TOKEN python data_collection.py
       - name: Feature Engineering notebook
         run: jupyter nbconvert --to notebook --execute 02_feature_engineering.ipynb --TemplateExporter.exclude_input=True --ExecutePreprocessor.kernel_name='python3' --output 02_notebook_executed
       - name: commit updated notebook 2
