--- a/.github/workflows/inference.yaml
+++ b/.github/workflows/inference.yaml
@@ -5,8 +5,8 @@ name: Run Inference
 on:
 
   workflow_dispatch:
-  pull_request:
-
+  pull_request_target:
+    types: [opened]
 
 jobs:
   pipeline:
