--- a/.github/workflows/inference.yaml
+++ b/.github/workflows/inference.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: quay.io/aicoe/ocp-ci-analysis
-    if: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID.passed }} == true
+#     if: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID.passed }} == true
 #     env:
     
 #       AWS_ACCESS_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID}}
