--- a/.github/workflows/inference.yaml
+++ b/.github/workflows/inference.yaml
@@ -1,4 +1,4 @@
-# We run this workflow on the base ocp-ci-analysis container image which contains dependencies neccesary to run these notebooks 
+# We run this workflow on the base ocp-ci-analysis container image which contains dependencies necessary to run these notebooks 
 name: Run Inference
 
 # Controls when the workflow will run
@@ -14,29 +14,18 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: quay.io/aicoe/ocp-ci-analysis
-    if: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID.passed }} == true
-    env:
-    
-      AWS_ACCESS_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID}}
-    
-      GITHUB_REPO: ${{ github.event.client_payload.REPO || secrets.REPO }}
-      GITHUB_ORG: ${{ github.event.client_payload.ORG || secrets.ORG }}
-
-      S3_ENDPOINT_URL: ${{ github.event.client_payload.S3_ENDPOINT_URL || secrets.S3_ENDPOINT_URL }}
-      S3_BUCKET: ${{ github.event.client_payload.S3_BUCKET || secrets.S3_BUCKET }}
-      AWS_SECRET_ACCESS_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
-
-      CEPH_BUCKET: ${{ github.event.client_payload.S3_BUCKET || secrets.S3_BUCKET }}
-      CEPH_BUCKET_PREFIX: ${{ github.event.client_payload.PREFIX|| secrets.CEPH_BUCKET_PREFIX }}
-      CEPH_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID }}
-      CEPH_SECRET_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
-
-      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.ACCESS_TOKEN}}
-      
-      REMOTE: 1
-      ACTION: 1
-
 
     steps:
       - name: Run Model Inference
         uses: redhat-et/time-to-merge-tool@v1
+        with:
+          AWS_ACCESS_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
+          S3_BUCKET: ${{ github.event.client_payload.S3_BUCKET || secrets.S3_BUCKET }}
+          CEPH_BUCKET_PREFIX: ${{ github.event.client_payload.PREFIX|| secrets.CEPH_BUCKET_PREFIX }}
+          S3_ENDPOINT_URL: ${{ github.event.client_payload.S3_ENDPOINT_URL || secrets.S3_ENDPOINT_URL }}
+          GITHUB_REPO: ${{ github.event.client_payload.REPO || secrets.REPO }}
+          GITHUB_ORG: ${{ github.event.client_payload.ORG || secrets.ORG }}
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.ACCESS_TOKEN}}
+          REMOTE: 1
+          ACTION: 1
