--- a/.github/workflows/inference.yaml
+++ b/.github/workflows/inference.yaml
@@ -30,5 +30,6 @@ jobs:
           CEPH_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID }}
           CEPH_SECRET_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.ACCESS_TOKEN}}
+          MODE: ${{ github.event.client_payload.MODE || secrets.MODE}}
           REMOTE: 1
           ACTION: 1
