--- a/.github/workflows/inference.yaml
+++ b/.github/workflows/inference.yaml
@@ -30,6 +30,7 @@ jobs:
           CEPH_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID }}
           CEPH_SECRET_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.ACCESS_TOKEN}}
-          MODE: ${{ github.event.client_payload.MODE || secrets.MODE}}
+          # Setting mode by default as 0, this will only run inference mode and if defined as 1 will train and run inference.
+          MODE: 0
           REMOTE: 1
           ACTION: 1
