--- a/.github/workflows/inference.yaml
+++ b/.github/workflows/inference.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Run Model Inference
         uses: redhat-et/time-to-merge-tool@v1
+        with: 
+          MODE: 0
         env:
           AWS_ACCESS_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID}}
           GITHUB_REPO: ${{ github.event.client_payload.REPO || secrets.REPO }}
@@ -30,7 +32,5 @@ jobs:
           CEPH_KEY_ID: ${{ github.event.client_payload.AWS_ACCESS_KEY_ID  || secrets.AWS_ACCESS_KEY_ID }}
           CEPH_SECRET_KEY: ${{ github.event.client_payload.AWS_SECRET_ACCESS_KEY || secrets.AWS_SECRET_ACCESS_KEY }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.ACCESS_TOKEN}}
-          # Set the mode by default as 0, this will only run inference mode and if defined as 1 will train and run inference.
-          MODE: 1
           REMOTE: 1
           ACTION: 1
